--- a/StackExchange/1-Presentation/Support/Supporting/Info.plist
+++ b/StackExchange/1-Presentation/Support/Supporting/Info.plist
@@ -19,13 +19,22 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>57</string>
+	<string>61</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
+	</dict>
+	<key>Stack Exchange API</key>
+	<dict>
+		<key>Host</key>
+		<string>api.stackexchange.com</string>
+		<key>Scheme</key>
+		<string>https</string>
+		<key>Version</key>
+		<string>2.2</string>
 	</dict>
 	<key>UIAppFonts</key>
 	<array>
